realização dos testes dos serviçes e ajustes nos serviçes