@@ -4,75 +4,82 @@ import br.com.lys.models.diario.Diario;
 import br.com.lys.repositories.DiarioRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.modelmapper.ModelMapper;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.Pageable;
-
-import java.util.List;
+import org.springframework.data.domain.PageRequest;
+import java.util.Collections;
 import java.util.Optional;
-
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.*;
 
+@ExtendWith(MockitoExtension.class)
 public class DiarioServiceTest {
-
-    @InjectMocks
-    private DiarioService diarioService;
 
     @Mock
     private DiarioRepository diarioRepository;
 
+    @Mock
+    private ModelMapper modelMapper;
+
+    @InjectMocks
+    private DiarioService diarioService;
+
+    private Diario diario;
+
     @BeforeEach
-    public void setup() {
-        MockitoAnnotations.openMocks(this);
+    void setUp() {
+        diario = new Diario();
     }
 
     @Test
-    public void testCreate() {
-        Diario diario = new Diario();
+    void createTest() {
         when(diarioRepository.save(any(Diario.class))).thenReturn(diario);
-        diarioService.create(diario);
+        Diario result = diarioService.create(diario);
+        assertNotNull(result);
         verify(diarioRepository).save(diario);
     }
 
     @Test
-    public void testRead() {
-        Diario diario = new Diario();
-        when(diarioRepository.findById(any(Long.class))).thenReturn(Optional.of(diario));
-        diarioService.read(1L);
-        verify(diarioRepository).findById(1L);
+    void readTest() {
+        Long id = 1L;
+        when(diarioRepository.findById(id)).thenReturn(Optional.of(diario));
+        Diario result = diarioService.read(id);
+        assertNotNull(result);
+        verify(diarioRepository).findById(id);
     }
 
     @Test
-    public void testDelete() {
-        diarioService.delete(1L);
-        verify(diarioRepository).deleteById(1L);
+    void deleteTest() {
+        Long id = 1L;
+        doNothing().when(diarioRepository).deleteById(id);
+        diarioService.delete(id);
+        verify(diarioRepository).deleteById(id);
     }
 
     @Test
-    public void testFindAll() {
-        Page<Diario> page = new PageImpl<>(List.of(new Diario()));
-        when(diarioRepository.findAll(any(Pageable.class))).thenReturn(page);
-        diarioService.findAll(Pageable.unpaged());
-        verify(diarioRepository).findAll(Pageable.unpaged());
+    void findAllTest() {
+        PageRequest pageRequest = PageRequest.of(0, 10);
+        Page<Diario> page = new PageImpl<>(Collections.singletonList(diario));
+        when(diarioRepository.findAll(pageRequest)).thenReturn(page);
+        Page<Diario> result = diarioService.findAll(pageRequest);
+        assertNotNull(result);
+        verify(diarioRepository).findAll(pageRequest);
     }
 
     @Test
-    public void testUpdate() {
-        Diario oldDiario = new Diario();
-        oldDiario.setTexto("Old Text");
-
-        Diario newDiario = new Diario();
-        newDiario.setTexto("New Text");
-
-        when(diarioRepository.findById(any(Long.class))).thenReturn(Optional.of(oldDiario));
-        when(diarioRepository.save(any(Diario.class))).thenReturn(newDiario);
-
-        diarioService.update(1L, newDiario);
-        verify(diarioRepository).save(oldDiario);
-        assert oldDiario.getTexto().equals("New Text");
+    void updateTest() {
+        Long id = 1L;
+        when(diarioRepository.findById(id)).thenReturn(Optional.of(diario));
+        when(diarioRepository.save(any(Diario.class))).thenReturn(diario);
+        Diario updatedDiario = new Diario();
+        Diario result = diarioService.update(id, updatedDiario);
+        assertNotNull(result);
+        verify(diarioRepository).findById(id);
+        verify(diarioRepository).save(diario);
     }
 }
